--- a/index.html
+++ b/index.html
@@ -46,24 +46,26 @@
             <div id="burgerMenuDiv"></div>
           </div>
         </label>
-        <div id="contenedor_header_secciones" class="contenedor_header_secciones">
-          <ul class="list">
-            <li><a class="anchord_secciones" href="#serviciosHr">¿Qué ofrecemos?</a></li>
-            <li><a class="anchord_secciones" href="#nosotrosHr">¿Quiénes somos?</a></li>
-            <li><a class="anchord_secciones" href="#contactoHr">Contacto</a></li>
+        <div id="contenedorHeaderSecciones" class="contenedor_header_secciones">
+          <ul id="navList" class="list">
+            <li><a id="anchordNav" class="anchord_secciones" href="#indexMain">Inicio</a></li>
+            <li><a id="anchordNav" class="anchord_secciones" href="#sectionNosotros">¿Quiénes somos?</a></li>
+            <li><a id="anchordNav" class="anchord_secciones" href="#sectionServicios">¿Qué ofrecemos?</a></li>
+            <li><a id="anchordNav" class="anchord_secciones" href="#sectionContacto">Contacto</a></li>
           </ul>
         </div>
       </nav>
     </header>
-    <main id="index_main" class="main">
+    <main id="indexMain" class="main">
       <section id="sectionPresentacion" class="section_presentacion">
+        <hr id="presentacionHr">
         <article id="contenedorPresentacion" class="contenedor_presentacion">
           <div class="contenedor_presentacion_h1">
             <h1 class="presentacion_h1">IMPULSAMOS TU CAMINO DIGITAL 🚀</h1>
           </div>
           <div style="height: 290px;">
           <div class="contenedor_btn_learnMore">
-            <a href="#serviciosHr" class="btn_learnMore">Conocé más</a>          
+            <a href="#sectionServicios" class="btn_learnMore">Conocé más</a>          
           </div>
           <div id="contenedorAnimationChevron" class="contenedor_animationChevron">
             <div class="container_chevron">
@@ -74,6 +76,161 @@
           </div>
         </article>
       </section>
+      <section id="sectionNosotros" class="section_nosotros">
+        <hr id="nosotrosHr">
+        <article id="containerNosotros" class="container_nosotros wow animate__animated animate__fadeInLeft">
+          <div id="contenedorNosotrosQuienesSomos" class="contenedor_nosotros_quienesSomos">
+            <h2 id="nosotrosQuienesSomosTitle" class="h2 nosotros_quienesSomos_title">
+              ¿QUIÉNES SOMOS?
+            </h2>
+            <p id="nosotrosQuienesSomosParagraph" class="nosotros_quienesSomos_paragraph">
+              Somos <span class="nosotros_quienesSomos_span">IMPULSAR</span> un equipo interdisciplinario de profesionales que brindan soluciones integrales a aquellos emprendimientos, marcas personales y empresariales que buscan herramientas para destacarse en el mercado.
+            </p>
+          </div>
+          <div id="nosotrosValoresContainer" class="nosotros_valores_container">
+            <div class="adn_container">
+              <div class="adn_box">
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+                  <div class="adn_items">
+                      <div class="adn_botton"></div>
+                      <div class="adn_line"></div>
+                      <div class="adn_botton"></div>
+                  </div>
+              </div>
+            </div> 
+            <div class="valores_container" id="valoresContainer">
+              <div id="valoresContent" class="valores_content"><p>COMPROMISO</p></div>
+              <div id="valoresContent" class="valores_content"><p>DEDICACIÓN</p></div>
+              <div id="valoresContent" class="valores_content"><p>CHISPA</p></div>
+              <div id="valoresContent" class="valores_content"><p>EFICACIA</p></div>
+              <div id="valoresContent" class="valores_content"><p>LEALTAD</p></div>
+            </div>
+          </div>            
+          <div id="contenedorNosotrosSpeach" class="contenedor_nosotros_Speach">
+            <h2 id="nosotrosSpeachTitle" class="h2 nosotros_speach_title">
+              ¿POR QUÉ ELEGIRNOS?
+            </h2>
+            <p id="nosotrosSpeachParagraph" class="nosotros_speach_paragraph">
+              Porque brindamos todas las soluciones en conjunto y en un solo lugar. Generamos un producto final que respeta la identidad de marca e identidad visual que destaca.
+              Al tener un  equipo conectado podrás encontrar las soluciones que se te vuelvan necesarias de manera ágil y eficaz.
+            </p>
+          </div>
+        </article>
+      </section>      
       <section id="sectionServicios" class="section_servicios">
         <hr id="serviciosHr">
         <h2 id="sectionServiciosTitle" class="h2 section_servicios_title wow animate__animated animate__fadeInLeft">
@@ -111,11 +268,11 @@
               <div class="swiper-wrapper carousel_content">
                   <div id="card" class="swiper-slide card">
                       <div class="dp">
-                          <h3 class="card_title">SERVICIO</h3>
+                          <h3 class="card_title">IMPULSO DE REDES</h3>
                       </div>
                       <div class="card_content">
                           <p class="card_paragraph">
-                              descripcion servicio
+                              Las redes sociales son la vía de contacto más utilizada, es importante un buen uso de ellas. Enterate cómo
                           </p>
                           <div class="contenedor_btn_card">
                               <a href="#" class="btn_card">Consultar</a>          
@@ -124,11 +281,11 @@
                   </div>
                   <div id="card" class="swiper-slide card">
                       <div class="dp">
-                          <h3 class="card_title">SERVICIO</h3>
+                          <h3 class="card_title">IMPULSO LEGAL</h3>
                       </div>
                       <div class="card_content">
                           <p class="card_paragraph">
-                              descripcion servicio
+                              Registramos tu marca, dominios y/o patentes para proteger tu emprendimiento. Aesoramos como aprovechar lo legal a tu favor.
                           </p>
                           <div class="contenedor_btn_card">
                               <a href="#" class="btn_card">Consultar</a>          
@@ -137,11 +294,11 @@
                   </div>
                   <div id="card" class="swiper-slide card">
                       <div class="dp">
-                          <h3 class="card_title">SERVICIO</h3>
+                          <h3 class="card_title">IMPULSO DE MARKETING</h3>
                       </div>
                       <div class="card_content">
                           <p class="card_paragraph">
-                              descripcion servicio
+                              Aprovechá los beneficios que te brindan Google, Instagram, Twitter y YouTube
                           </p>
                           <div class="contenedor_btn_card">
                               <a href="#" class="btn_card">Consultar</a>          
@@ -150,11 +307,11 @@
                   </div>
                   <div id="card" class="swiper-slide card">
                       <div class="dp">
-                          <h3 class="card_title">SERVICIO</h3>
+                          <h3 class="card_title">IMPULSO DE DISEÑO GRÁFICO</h3>
                       </div>
                       <div class="card_content">
                           <p class="card_paragraph">
-                              descripcion servicio
+                            Universo gráfico, manual de estilos, papelería, folletería, publicidad, merchandising, y ¡mucho más!
                           </p>
                           <div class="contenedor_btn_card">
                               <a href="#" class="btn_card">Consultar</a>          
@@ -163,11 +320,11 @@
                   </div>
                   <div id="card" class="swiper-slide card">
                       <div class="dp">
-                          <h3 class="card_title">SERVICIO</h3>
+                          <h3 class="card_title">IMPULSO FOTOGRÁFICO</h3>
                       </div>
                       <div class="card_content">
                           <p class="card_paragraph">
-                              descripcion servicio
+                              Obtené fotografías profesionales para utilizar en tu web y redes sociales.
                           </p>
                           <div class="contenedor_btn_card">
                               <a href="#" class="btn_card">Consultar</a>          
@@ -189,28 +346,6 @@
                   </div>
                   <div class="swiper-pagination"></div>
               </div>
-          </div>
-        </article>
-      </section>
-      <section id="sectionNosotros" class="section_nosotros">
-        <hr id="nosotrosHr">
-        <article id="containerNosotros" class="container_nosotros wow animate__animated animate__fadeInLeft">
-          <div id="contenedorNosotrosQuienesSomos" class="contenedor_nosotros_quienesSomos">
-            <h3 id="nosotrosQuienesSomosTitle" class="h3 nosotros_quienesSomos_title">
-              ¿QUIÉNES SOMOS?
-            </h3>
-            <p id="nosotrosQuienesSomosParagraph" class="nosotros_quienesSomos_paragraph">
-              Somos IMPULSAR, un equipo interdisciplinario de profesionales que brindan soluciones integrales a aquellos emprendimientos, marcas personales y empresariales que busquen herramientas para destacarse en el mercado.
-            </p>
-          </div>
-          <div id="contenedorNosotrosSpeach" class="contenedor_nosotros_Speach">
-            <h3 id="nosotrosSpeachTitle" class="h3 nosotros_speach_title">
-              ¿POR QUÉ ELEGIRNOS?
-            </h3>
-            <p id="nosotrosSpeachParagraph" class="nosotros_speach_paragraph">
-              Te brindamos todas las soluciones en conjunto y en un solo lugar. Generamos un producto final que respeta la identidad de marca e identidad visual que destaque.
-              Al tener un  equipo conectado podrás encontrar las soluciones que se te vuelvan necesarias de manera ágil y eficaz.”
-            </p>
           </div>
         </article>
       </section>
@@ -378,6 +513,7 @@
       <!-- Cierra Copyright -->
     </footer>     
     <!-- Scripts propios-->
+    <script type="text/javascript" src="./js/hiddenNav.js"></script>
     <!-- Script Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- Swipper-->
