--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
               Somos <span class="nosotros_quienesSomos_span">IMPULSAR</span> un equipo interdisciplinario de profesionales que brindan soluciones integrales a aquellos emprendimientos, marcas personales y empresariales que buscan herramientas para destacarse en el mercado.
             </p>
           </div>
+          <div id="nosotrosValoresTitleContainer" class="nosotros_valores_title_container">
+            <h3 class="h3 nosotros_valores_title wow animate__animated animate__fadeInLeft">
+              Nuestro ADN
+            </h3>
+            <p class="nosotros_valores_paragraph">
+              Compuesto por valores que impregnan cada una de nuestras propuestas con las que buscamos impulsarte.
+            </p>
+          </div>
           <div id="nosotrosValoresContainer" class="nosotros_valores_container">
             <div class="adn_container">
               <div class="adn_box">
@@ -213,11 +221,26 @@
               </div>
             </div> 
             <div class="valores_container" id="valoresContainer">
-              <div id="valoresContent" class="valores_content"><p>COMPROMISO</p></div>
-              <div id="valoresContent" class="valores_content"><p>DEDICACIÓN</p></div>
-              <div id="valoresContent" class="valores_content"><p>CHISPA</p></div>
-              <div id="valoresContent" class="valores_content"><p>EFICACIA</p></div>
-              <div id="valoresContent" class="valores_content"><p>LEALTAD</p></div>
+              <div id="valoresContent" class="valores_content borderEffects">
+                <span></span><span></span><span></span><span></span>
+                <p>COMPROMISO</p>
+              </div>
+              <div id="valoresContent" class="valores_content borderEffects">
+                <span></span><span></span><span></span><span></span>
+                <p>DEDICACIÓN</p>
+              </div>
+              <div id="valoresContent" class="valores_content borderEffects">
+                <span></span><span></span><span></span><span></span>                
+                <p>CREATIVIDAD</p>
+              </div>
+              <div id="valoresContent" class="valores_content borderEffects">
+                <span></span><span></span><span></span><span></span>                
+                <p>EFICACIA</p>
+              </div>  
+              <div id="valoresContent" class="valores_content borderEffects">
+                <span></span><span></span><span></span><span></span>                
+                <p>LEALTAD</p>
+              </div>
             </div>
           </div>            
           <div id="contenedorNosotrosSpeach" class="contenedor_nosotros_Speach">
