Avances en writing y algunos diseños. Fin section nosotros, comienzo de section service

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <section id="sectionNosotros" class="section_nosotros">
         <hr id="nosotrosHr">
         <article id="containerNosotros" class="container_nosotros wow animate__animated animate__fadeInLeft">
-          <div id="contenedorNosotrosQuienesSomos" class="contenedor_nosotros_quienesSomos">
+          <div id="contenedorNosotrosQuienesSomos" class="contenedor_nosotros_quienesSomos wow animate__animated animate__fadeInLeft">
             <h2 id="nosotrosQuienesSomosTitle" class="h2 nosotros_quienesSomos_title">
               ¿QUIÉNES SOMOS?
             </h2>
@@ -87,7 +87,7 @@
               Somos <span class="nosotros_quienesSomos_span">IMPULSAR</span> un equipo interdisciplinario de profesionales que brindan soluciones integrales a aquellos emprendimientos, marcas personales y empresariales que buscan herramientas para destacarse en el mercado.
             </p>
           </div>
-          <div id="nosotrosValoresTitleContainer" class="nosotros_valores_title_container">
+          <div id="nosotrosValoresTitleContainer" class="nosotros_valores_title_container wow animate__animated animate__fadeInLeft">
             <h3 class="h3 nosotros_valores_title wow animate__animated animate__fadeInLeft">
               Nuestro ADN
             </h3>
@@ -95,7 +95,7 @@
               Compuesto por valores que impregnan cada una de nuestras propuestas con las que buscamos impulsarte.
             </p>
           </div>
-          <div id="nosotrosValoresContainer" class="nosotros_valores_container">
+          <div id="nosotrosValoresContainer" class="nosotros_valores_container wow animate__animated animate__fadeInLeft">
             <div class="adn_container">
               <div class="adn_box">
                   <div class="adn_items">
@@ -242,16 +242,50 @@
                 <p>LEALTAD</p>
               </div>
             </div>
+          </div>
+          <div id="nosotrosMisionContainer" class="nosotros_mision_container wow animate__animated animate__fadeInLeft">
+            <h3 class="h3 nosotros_mision_title">Nuestra misión</h3>
+            <p class="nosotros_mision_paragraph">
+              Buscamos mediante la psicología laboral, el diseño gráfico y la programación, brindar servicios que en conjunto permitan impulsar a quienes quieran destacar en el mercado.
+              <br>A través del cruce de nuestra puerta multidisciplinaria, el impacto de nuestro proyecto religará los valores para acompañar el crecimiento en potencia de cada uno de los proyectos.
+            </p>
+            <div id="hashtagContainer" class="nosotros_mision_hashtag_container">
+              <img src="./assets/icons3D/rocket-dynamic-color.png" class="hashtagRocket"></img>
+              <h3 class="nosotros_mision_hashtag"> <span>#</span> TE IMPULSAMOS</p>
+            </div> 
           </div>            
-          <div id="contenedorNosotrosSpeach" class="contenedor_nosotros_Speach">
+          <div id="contenedorNosotrosSpeach" class="contenedor_nosotros_Speach wow animate__animated animate__fadeInLeft">
             <h2 id="nosotrosSpeachTitle" class="h2 nosotros_speach_title">
               ¿POR QUÉ ELEGIRNOS?
             </h2>
             <p id="nosotrosSpeachParagraph" class="nosotros_speach_paragraph">
-              Porque brindamos todas las soluciones en conjunto y en un solo lugar. Generamos un producto final que respeta la identidad de marca e identidad visual que destaca.
-              Al tener un  equipo conectado podrás encontrar las soluciones que se te vuelvan necesarias de manera ágil y eficaz.
-            </p>
+              Porque al tener un equipo conectado podrás encontrar las soluciones de manera ágil y eficaz, es decir brindamos todas las soluciones en conjunto y en un solo lugar.<br>
+              Contamos con un proceso de construcción y evaluación para garantizar la calidad de nuestro servicio. <br>
+              Al elegirnos contarás con un producto final que respeta la identidad de marca e identidad visual de tu emprendimiento o marca, un servicio personalizado que te impulsa a lograr tus metas.
+            </p>  
           </div>
+          <div class="beneficios_container" id="beneficiosContainer">
+            <div id="beneficioContent" class="beneficio_content borderEffects">
+              <span></span><span></span><span></span><span></span>
+              <p>EQUIPO CONECTADO</p>
+            </div>
+            <div id="beneficioContent" class="beneficio_content borderEffects">
+              <span></span><span></span><span></span><span></span>
+              <p>IDENTIDAD</p>
+            </div>
+            <div id="beneficioContent" class="beneficio_content borderEffects">
+              <span></span><span></span><span></span><span></span>                
+              <p>UN MISMO LUGAR</p>
+            </div>
+            <div id="beneficioContent" class="beneficio_content borderEffects">
+              <span></span><span></span><span></span><span></span>                
+              <p>TODAS TUS SOLUCIONES</p>
+            </div>  
+            <div id="beneficioContent" class="beneficio_content borderEffects">
+              <span></span><span></span><span></span><span></span>                
+              <p>SERVICIO PERSONALIZADO</p>
+            </div>
+          </div> 
         </article>
       </section>      
       <section id="sectionServicios" class="section_servicios">
@@ -259,6 +293,30 @@
         <h2 id="sectionServiciosTitle" class="h2 section_servicios_title wow animate__animated animate__fadeInLeft">
           ¿QUÉ OFRECEMOS?
         </h2>
+        <article class="servicio_principal_container wow animate__animated animate__fadeInLeft">
+          <div class="containerStar">
+            <h3 class="h3 servicioPrincipal_title">Nuestro producto estrella</h3>
+            <img src="./assets/icons3D/star-dynamic-premium.png" class="servicioPrincipal_star" alt="">
+          </div>          
+          <h4 class="h4 caminoDigital_Title">IMPULSO DE CAMINO DIGITAL</h4>
+          <p class="caminoDigital_paragraph">
+            Es un proceso que respeta tres etapas con las que construiremos las bases firmes para el despegue exitoso de tu marca, generando una identidad consistente que se transmitirá tanto en lo visual como por medio de las herramientas web que desarrollaremos para conseguir los objetivos propuestos.
+          </p>
+          <div class="impulsos_container" id="impulsosContainer">
+            <div id="impulsosContent" class="impulsos_content borderEffects">
+              <span></span><span></span><span></span><span></span>
+              <p>IMPULSO DE IDENTIDAD DE MARCA</p>
+            </div>
+            <div id="impulsosContent" class="impulsos_content borderEffects">
+              <span></span><span></span><span></span><span></span>
+              <p>IMPULSO DE IDENTIDAD DE VISUAL</p>
+            </div>
+            <div id="impulsosContent" class="impulsos_content borderEffects">
+              <span></span><span></span><span></span><span></span>                
+              <p>IMPULSO WEB</p>
+            </div>
+          </div>
+        </article>
         <article id="containerContentImpulso" class="container_content_impulso">
           <div id="contenedorImagenImpulsoMarca" class="contenedor_impulso_img">
             <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_ EN BLANCO-11.png" alt="" class="img_impulso">      
@@ -286,6 +344,7 @@
             <p class="impulso_paragraph">Como resultado final del proceso, tendrás una página web adaptada a tus necesidades y que te ayudará a plasmar los valores que te definen y a destacar en el mercado.</p>
           </div>
         </article>   
+        <h3 class="h3 carousel_title wow animate__animated animate__fadeInLeft">Más productos a tu disposición</h3>
         <article class="carousel_article">
           <div class="swiper mySwiper carousel_container">
               <div class="swiper-wrapper carousel_content">
