--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             </p>
             <div id="hashtagContainer" class="nosotros_mision_hashtag_container">
               <img src="./assets/icons3D/rocket-dynamic-color.png" class="hashtagRocket"></img>
-              <h3 class="nosotros_mision_hashtag"> <span>#</span> TE IMPULSAMOS</p>
+              <h3 class="nosotros_mision_hashtag"> <span>#</span> IMPULSAR</p>
             </div> 
           </div>            
           <div id="contenedorNosotrosSpeach" class="contenedor_nosotros_Speach wow animate__animated animate__fadeInLeft">
@@ -316,6 +316,7 @@
               <p>IMPULSO WEB</p>
             </div>
           </div>
+          <h3 class="h4 caminoDigital_pie">Conocelos y asesorate</h3>
         </article>
         <article id="containerContentImpulso" class="container_content_impulso">
           <div id="contenedorImagenImpulsoMarca" class="contenedor_impulso_img">
@@ -323,7 +324,7 @@
           </div>
           <div id="containerSpeachImpulsoMarca" class="container_impulso_speach wow animate__animated animate__fadeInLeft delay-1">
             <h3 class=" h3 impulso_title">IMPULSO DE IDENTIDAD DE MARCA</h3>
-            <p class="impulso_paragraph"> El primer paso es un proceso de descubrimiento, nos interiorizamos en tus objetivos, metas, el corazón de tu marca y su historia.</p>
+            <p class="impulso_paragraph"> El primer paso de este proceso es de descubrimiento y arquitectura.<br>Nos interiorizamos en tus objetivos, metas, el corazón de tu marca y su historia, para luego construir la identidad de tu marca.</p>
           </div>
         </article>
         <article id="containerContentImpulso" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-2">
@@ -331,8 +332,8 @@
             <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_ EN BLANCO-11.png" alt="" class="img_impulso">      
           </div>
           <div id="containerParagraphImpulsoVisual" class="container_impulso_speach">
-            <h3 class=" h3 impulso_title"> IMPULSO DE IDENTIDAD VISUAL </h3>
-            <p class="impulso_paragraph">Continuamos el proceso con el diseño o rediseño de tu emprendimiento, para convertir el resultado del primer proceso en identidad visual.</p>
+            <h3 class=" h3 impulso_title">IMPULSO DE IDENTIDAD VISUAL </h3>
+            <p class="impulso_paragraph">Continuamos el proceso con el diseño o rediseño visual de tu emprendimiento, el cual está basado en la identidad que construimos en el primer paso. Una visual que respete la historia e identidad, genera diferencias que te potenciarán.</p>
           </div>          
         </article>
         <article id="containerContentImpulso" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-3">
@@ -341,9 +342,14 @@
           </div>
           <div id="containerParagraphImpulsoWeb" class="container_impulso_speach">
             <h3 class=" h3 impulso_title">IMPULSO WEB</h3>
-            <p class="impulso_paragraph">Como resultado final del proceso, tendrás una página web adaptada a tus necesidades y que te ayudará a plasmar los valores que te definen y a destacar en el mercado.</p>
+            <p class="impulso_paragraph">Como resultado final del proceso, tendrás una serie de herramientas web.<br>La principal será una página web personificada, con la voz e imagen que transmitirá la identidad de tu marca, plasmar los valores que te definen y a destacar en el mercado.</p>
           </div>
         </article>   
+        <div class="asesorate">
+          <div class="asesorate_container">
+            <a href="#sectionContacto" class="asesorate_btn">Asesorate!</a>          
+          </div>
+        </div>        
         <h3 class="h3 carousel_title wow animate__animated animate__fadeInLeft">Más productos a tu disposición</h3>
         <article class="carousel_article">
           <div class="swiper mySwiper carousel_container">
@@ -426,7 +432,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="swiper-pagination"></div>
+                  <!-- <div class="swiper-pagination"></div> -->
               </div>
           </div>
         </article>
@@ -436,9 +442,26 @@
         <h2 id="contactoTitle" class="h2">
           CONTACTO
         </h2>
+        <article class="contacto_redes_container">
+          <div class="contacto_redes">
+            <!-- Facebook -->
+            <a href="" type="button" class="contacto_redes_anchord">
+              <i class="fa fa-facebook"></i>
+            </a>
+            <!-- Instagram -->
+            <a href="" type="button" class="contacto_redes_anchord">
+              <i class="fa fa-brands fa-instagram"></i>
+            </a>
+            </a>
+            <!-- Whatsapp -->
+            <a href="" type="button" class="contacto_redes_anchord">
+              <i class="fa fa-brands fa-whatsapp"></i>  
+            </a>
+        </div>
+        </article>
         <form action="https://formspree.io/f/xoqrplko" id="contactoFormulario" class="contacto_formulario" method="post" enctype="">
           <div id="formularioContenedorDatos" class="formulario_contenedor_datos">
-            <h3 class="h3">DATOS DE CONTACTO</h3>
+            <!-- <h3 class="h3">DATOS DE CONTACTO</h3> -->
             <div class="mb-3 separador-leve contenedor_inputs">
                 <label for="email" name="_replyto" class="form-label">Email</label>
                 <input class="section__formulario__contenedor__form-input" type="email" name="mail" placeholder="Ejemplo: contacto@impulsardev.com.ar" id="correo" required><br>
@@ -457,32 +480,29 @@
             </div>
           </div>
           <div id="formularioContenedorTextarea" class="formulario_contenedor_textarea">  
-            <h3 class="h3">¿QUERÉS SABER MÁS?</h3>
+            <h3 class="h3">¡ENVÍANOS TU MENSAJE!</h3>
             <div class="mb-3 contenedor_inputs">
-                <label for="consulta" class="form-label">¡Preguntanos!</label>
-                <textarea class="form-control" placeholder="En breve te respondemos 😉" name="message" id="mensaje" rows="3" required></textarea>
+<!--                 <label for="consulta" class="form-label">¡Preguntanos!</label>
+ -->                <textarea class="form-control" placeholder="En breve te respondemos 😉" name="message" id="mensaje" rows="3" required></textarea>
             </div>
             <div id="contenedorBotonFormulario" class="contenedor_btn_formulario">
-              <button type="submit" class="btn btn_formulario">Enviar Consulta</button>
+              <button type="submit" class="btn btn_formulario">Enviar mensaje</button>
             </div>
           </div>
         </form>
-        <article id="contactoRedesUbicacion" class="contacto_redesUbicacion">
+<!--         <article id="contactoRedesUbicacion" class="contacto_redesUbicacion">
           <div id="containerRedes" class="containerRedes">
             <h3 class="h3">
               REDES
             </h3>            
             <div class="contacto_redes">
-                <!-- Facebook -->
                 <a href="" type="button" class="contacto_redes_anchord">
                   <i class="fa fa-facebook"></i>
                 </a>
-                <!-- Instagram -->
                 <a href="" type="button" class="contacto_redes_anchord">
                   <i class="fa fa-brands fa-instagram"></i>
                 </a>
                 </a>
-                <!-- Whatsapp -->
                 <a href="" type="button" class="contacto_redes_anchord">
                   <i class="fa fa-brands fa-whatsapp"></i>  
                 </a>
@@ -495,6 +515,13 @@
             </p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3349.8745787053654!2d-68.8586003851099!3d-32.90148417693296!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e090a39c9bbcb%3A0xa2d0f4a092f0413b!2sO.%20V.%20Andrade%20315%2C%20M5500BDO%20Mendoza!5e0!3m2!1ses!2sar!4v1636294490050!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" class="container iframe__Contacto"></iframe>
           </div>
+        </article> -->
+        <article class="contacto_calendly">
+          <h4 class="h4 contacto_calendly_title">Agendá tu consulta</h4>
+          <!-- Principio del widget integrado de Calendly -->
+          <div class="calendly-inline-widget calendly" data-url="https://calendly.com/impulsar-dev" style="min-width:320px;height:630px;"></div>
+          <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+          <!-- Final del widget integrado de Calendly -->
         </article>
       </section>
       <section id="sectionWhatsapp">
